# data.tatortrechts.de

./: .gitignore  Dockerfile  Format.md  LICENSE  Organisations.md  Pipfile  README.md  app.json  pyproject.toml  scrape.sh
aggregate/: README.md  add_geo_mac.py  add_secret.py  combine.ipynb  find_duplicates.ipynb  metadata.json  regions.json  scrapers.txt  serve.sh  serve_dokku.sh  serve_mac.sh  update.sh
docs/: Notes.md  ReportFormat.md  Topology.md
scrapeall/: Dockerfile  run.sh
serve/: README.md  add_geo.py  add_secret.py  combine.ipynb  find_duplicates.ipynb  get.sh  run_mac.sh  scrapers.txt  serve.sh  update.sh
