[tool.poetry]
name = "data.tatortrechts.de"
version = "0.0.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
datasette = "*"
datasette-cluster-map = "*"
clean-text = "*"
dataset = "*"
requests = "*"
unidecode = "*"
jupyterlab = "*"
pycountry = "^20.7.3"
tqdm = "^4.48.2"
nb-black = "^1.0.7"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
